<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.view.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/phone_sync" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/re"
                    android:textColor="@color/color_pop_primary"
                    android:textSize="@dimen/_45ssp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/call"
                    android:textColor="@color/color_pop_secondary"
                    android:textSize="@dimen/_45ssp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/easy"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/color_text_light"
                    android:textSize="@dimen/_23ssp"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/contact_backup"
                    android:alpha="0.7"
                    android:textColor="@color/color_pop_primary"
                    android:textSize="@dimen/_23ssp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/and"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/color_text_light"
                    android:textSize="@dimen/_23ssp"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/restore"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:alpha="0.7"
                    android:textColor="@color/color_pop_secondary"
                    android:textSize="@dimen/_23ssp"
                    tools:ignore="RelativeOverlap" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/app"
                    android:textColor="@color/color_text_light"
                    android:textSize="@dimen/_23ssp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/a_prod_of"
                android:textColor="@color/color_grey_light"
                android:textSize="@dimen/_10ssp" />

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_20sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo_dark" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/open_sans_regular"
            android:textColor="@color/color_text_dark"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>