<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.home.view.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_pop_red"
        android:id="@+id/offline_ribbion"
        android:visibility="gone"
        android:paddingVertical="@dimen/_4sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:fontFamily="@font/open_sans_regular"
            android:layout_centerInParent="true"
            android:text="@string/offline"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/offline_ribbion"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_view"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:elevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/phone_sync" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/re"
                            android:textColor="@color/color_pop_primary"
                            android:textSize="@dimen/_40ssp"
                            tools:ignore="RelativeOverlap" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/call"
                            android:textColor="@color/color_pop_secondary"
                            android:textSize="@dimen/_40ssp"
                            tools:ignore="RelativeOverlap" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/easy"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:textColor="@color/color_text_light"
                            android:textSize="@dimen/_22ssp"
                            tools:ignore="RelativeOverlap" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/contact_backup"
                            android:alpha="0.7"
                            android:textColor="@color/color_pop_primary"
                            android:textSize="@dimen/_22ssp"
                            tools:ignore="RelativeOverlap" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/and"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:textColor="@color/color_text_light"
                            android:textSize="@dimen/_22ssp"
                            tools:ignore="RelativeOverlap" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/restore"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:alpha="0.7"
                            android:textColor="@color/color_pop_secondary"
                            android:textSize="@dimen/_22ssp"
                            tools:ignore="RelativeOverlap" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bebas_bold"
                            android:text="@string/app"
                            android:textColor="@color/color_text_light"
                            android:textSize="@dimen/_22ssp"
                            tools:ignore="RelativeOverlap" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/history"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ripple_anim_circle"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_clock"
                    app:tint="@color/color_pop_extra" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/main_txt"
                android:textColor="#092139"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:layout_above="@id/footer"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:background="@drawable/btn_ripple_blue"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:background="@drawable/blue_circle_bg"
                        android:padding="@dimen/_22sdp"
                        android:src="@drawable/ic_upload"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:elevation="0dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/upload_con"
                        android:textColor="#092139"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/btn_ripple_green"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp">

                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:background="@drawable/green_circle_bg"
                        android:padding="@dimen/_22sdp"
                        android:src="@drawable/ic_download"
                        app:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:elevation="0dp"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="@string/restore_con"
                        android:textColor="#092139"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/a_prod_of"
                    android:textColor="@color/color_grey_light"
                    android:textSize="@dimen/_10ssp" />

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_logo_dark" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/open_sans_regular"
                android:textColor="@color/color_text_dark"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>