<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_30sdp"
    tools:context=".ui.restore.view.RestoreViaFileFragment">

    <TextView
        android:id="@+id/head_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:elevation="0dp"
        android:fontFamily="@font/open_sans_regular"
        android:paddingHorizontal="@dimen/_30sdp"
        android:text="@string/restore_below"
        android:textColor="@color/color_pop_text_dark"
        android:textSize="@dimen/_11ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/doc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:elevation="0dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/file_name"
                android:textColor="#092139"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:id="@+id/restore_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/btn_ripple_full_blue"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_download"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/restore_contact"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>