<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="@dimen/_20sdp"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        android:paddingVertical="@dimen/_30sdp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_margin="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"
                android:fontFamily="@font/bebas_bold"
                android:text="@string/backing_up"
                android:textColor="@color/color_pop_primary"
                android:textSize="@dimen/_18ssp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_gravity="center"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_130sdp"
                android:id="@+id/animation_view"
                app:lottie_fileName="backup.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:elevation="0dp"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/backed_up"
                android:textColor="@color/color_pop_text_dark"
                android:textSize="@dimen/_11ssp" />

            <LinearLayout
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_round_red"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_cancel"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:fontFamily="@font/bebas_bold"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>